# cad_project

./: CMakeLists.txt
Common/: CMakeLists.txt  Edge.cpp  Edge.h  Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  Loop.cpp  Loop.h  MeshData.cpp  MeshData.h  Solid.cpp  Solid.h  Vertex.cpp  Vertex.h
EularOperation/: CMakeLists.txt  EularOperation.cpp  EularOperation.h  Operands.h
Files/: CMakeLists.txt  Files.cpp  Files.h
Modeling/: CMakeLists.txt  Model.cpp  Model.h
Render/: CMakeLists.txt  Camera.cpp  Camera.h  Render.cpp  Render.h
Test/: CMakeLists.txt  TestClass.cpp  TestClass.h  test.cpp
data/: op.txt  op_2.txt  op_3.txt  v.txt  v_2.txt
glsl/: f.gsl  v.gsl
